Refactoring classes. Generic section tags now hold general styling.

--- a/src/styles/_hub.scss
+++ b/src/styles/_hub.scss
@@ -15,6 +15,7 @@
 @import "../components/Goals/_goals";
 @import "../components/Header/_header";
 @import "../components/ProgressBar/_progress-bar";
+@import "../components/Section/_section";
 
 // MEDIA QUERIES
 @import "_media-queries";
