--- a/src/styles/_media-queries.scss
+++ b/src/styles/_media-queries.scss
@@ -25,12 +25,12 @@
     position: relative;
   }
 
-  .top {
+  .top__noborder {
     position: sticky;
     top: -35rem;
   }
 
-  .main-2 {
+  section {
     top: 6rem;
   }
 }
