--- a/src/styles/_classes.scss
+++ b/src/styles/_classes.scss
@@ -42,6 +42,7 @@
 
   ul {
     display: grid;
+    flex-grow: 1;
     gap: 1rem;
 
     li a {
@@ -80,16 +81,9 @@
   }
 }
 
-.top {
-  border-top: 1rem solid var(--color-dark);
-}
-
 .top__noborder {
-  // display: flex;
-  // gap: 1rem;
+  border-top: none;
 
   position: sticky;
   top: 8.5rem;
-
-  z-index: 0;
 }
