--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -104,4 +104,42 @@ p {
   }
 }
 
+section {
+  width: 100vw;
+  height: 100%;
+  display: flex;
+  gap: 1rem;
+
+  background-color: var(--color-dark);
+  border-top: 1rem solid var(--color-dark);
+  position: sticky;
+  top: 7rem;
+
+  z-index: 2;
+
+    & div {
+    width: 100%;
+    padding: 2rem;
+
+    display: flex;
+    align-items: left;
+    justify-content: center;
+    flex-direction: column;
+
+    background-color: var(--color-white);
+
+    span {
+      margin: .33rem;
+      padding: 1rem;
+      border: .5rem solid var(--color-dark);
+      display: inline-block;
+      font-weight: bold;
+
+      transition: all 5s;
+      cursor: no-drop;
+
+    }
+  }
+}
+
 @import '_hub';
