--- a/src/styles/_media-queries.scss
+++ b/src/styles/_media-queries.scss
@@ -6,7 +6,7 @@
     top: -21rem;
   }
 
-  .top__noborder {
+  section:nth-child(1) {
     flex-direction: column;
     top: -12rem;
   }
@@ -25,7 +25,7 @@
     position: relative;
   }
 
-  .top__noborder {
+  section:nth-child(1) {
     position: sticky;
     top: -35rem;
   }
