--- a/src/pages/BlogPost/Imagination/_imagination.scss
+++ b/src/pages/BlogPost/Imagination/_imagination.scss
@@ -1,13 +1,12 @@
 #imagination-main {
-  width: 100%;
-  display: flex;
+  background-color: var(--color-grey);
   flex-direction: row;
   gap: 1rem;
 
   article {
     background-color: var(--color-grey);
     padding: 2rem 2rem;
-    max-width: 38vw;
+    max-width: 60vw;
 
     blockquote {
       font-family: 'Times New Roman', Times, serif;
@@ -32,19 +31,20 @@
 
   @media all and (max-width: $tablet) {
     article {
-      max-width: 68vw;
+      max-width: 62vw;
     }   
   }
 
   aside {
     @include photo-default;
-    height: 100vh;
-    display: sticky;
-    top: 8rem;
+
+    position: fixed;
+    left: calc(62vw - 1rem);
+    border-left: 1rem solid var(--color-dark);
 
     background-image: url('../../public/images/michel6.jpg');
-    border-top: none;
     width: 100%;
+    height: 100%;
   }
 
   @media all and (min-width: 100rem) {
