--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -438,10 +438,7 @@ section.blog-post {
 }
 
 #imagination-main {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  background-color: var(--color-grey);
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -452,7 +449,7 @@ section.blog-post {
 #imagination-main article {
   background-color: var(--color-grey);
   padding: 2rem 2rem;
-  max-width: 38vw;
+  max-width: 60vw;
 }
 
 #imagination-main article blockquote {
@@ -495,7 +492,7 @@ section.blog-post {
 
 @media all and (max-width: 64rem) {
   #imagination-main article {
-    max-width: 68vw;
+    max-width: 62vw;
   }
 }
 
@@ -503,12 +500,12 @@ section.blog-post {
   min-height: 89vh;
   padding: 2rem;
   background-size: cover;
-  height: 100vh;
-  display: sticky;
-  top: 8rem;
+  position: fixed;
+  left: calc(62vw - 1rem);
+  border-left: 1rem solid var(--color-dark);
   background-image: url("../../public/images/michel6.jpg");
-  border-top: none;
   width: 100%;
+  height: 100%;
 }
 
 #imagination-main aside h2 {
