--- a/src/pages/BlogPost/Imagination/_imagination.scss
+++ b/src/pages/BlogPost/Imagination/_imagination.scss
@@ -38,18 +38,14 @@
   aside {
     @include photo-default;
 
-    position: fixed;
-    left: calc(62vw - 1rem);
-    border-left: 1rem solid var(--color-dark);
-
-    background-image: url('../../public/images/michel6.jpg');
     width: 100%;
     height: 100%;
-  }
+    border-left: 1rem solid var(--color-dark);
 
-  @media all and (min-width: 100rem) {
-    aside {
-      background-image: url('../../public/images/michel6__rotated.jpg');
-    }
+    position: fixed;
+    left: calc(62vw - 1rem);
+    
+    background-image: url('../../public/images/michel6.jpg');
+    background-size: contain;
   }
 }
