--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -500,23 +500,18 @@ section.blog-post {
   min-height: 89vh;
   padding: 2rem;
   background-size: cover;
-  position: fixed;
-  left: calc(62vw - 1rem);
-  border-left: 1rem solid var(--color-dark);
-  background-image: url("../../public/images/michel6.jpg");
   width: 100%;
   height: 100%;
+  border-left: 1rem solid var(--color-dark);
+  position: fixed;
+  left: calc(62vw - 1rem);
+  background-image: url("../../public/images/michel6.jpg");
+  background-size: contain;
 }
 
 #imagination-main aside h2 {
   color: var(--color-staticwhite);
-  max-width: 30rem;
-}
-
-@media all and (min-width: 100rem) {
-  #imagination-main aside {
-    background-image: url("../../public/images/michel6__rotated.jpg");
-  }
+  max-width: 45rem;
 }
 
 .banner {
@@ -887,7 +882,7 @@ main.nvm {
 
 .photo-1 h2 {
   color: var(--color-staticwhite);
-  max-width: 30rem;
+  max-width: 45rem;
 }
 
 .photo-2 {
@@ -899,7 +894,7 @@ main.nvm {
 
 .photo-2 h2 {
   color: var(--color-staticwhite);
-  max-width: 30rem;
+  max-width: 45rem;
 }
 
 .photo-3 {
@@ -912,7 +907,7 @@ main.nvm {
 
 .photo-3 h2 {
   color: var(--color-staticwhite);
-  max-width: 30rem;
+  max-width: 45rem;
 }
 
 .photo-4 {
@@ -925,7 +920,7 @@ main.nvm {
 
 .photo-4 h2 {
   color: var(--color-staticwhite);
-  max-width: 30rem;
+  max-width: 45rem;
 }
 
 .photo-5 {
@@ -938,7 +933,7 @@ main.nvm {
 
 .photo-5 h2 {
   color: var(--color-staticwhite);
-  max-width: 30rem;
+  max-width: 45rem;
 }
 
 footer {
