--- a/src/pages/Blog/_blog.scss
+++ b/src/pages/Blog/_blog.scss
@@ -36,8 +36,19 @@
   position: sticky;
   top: 7rem;
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   gap: 1rem;
 
   background-color: var(--color-dark);
+
+  .log {
+    background-color: var(--color-white);
+    padding: 1rem;
+
+    display: flex;
+    flex-direction: row;
+    font-size: var(--h3);
+    font-weight: 700;
+  }
 }
