--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -135,21 +135,6 @@ h5 {
   font-size: var(--h5);
 }
 
-h6 {
-  margin-bottom: 1rem;
-  margin-right: 1rem;
-  padding: 0.5rem;
-  display: inline-block;
-  background-color: var(--color-grey);
-  border: 0.2rem solid var(--color-dark);
-  border-radius: 0.5rem;
-  -webkit-box-shadow: 0rem 0rem 0.01rem rgba(0, 0, 0, 0.15);
-          box-shadow: 0rem 0rem 0.01rem rgba(0, 0, 0, 0.15);
-  color: var(--color-dark);
-  -webkit-transition: 1s;
-  transition: 1s;
-}
-
 li {
   list-style-type: none;
 }
@@ -210,6 +195,21 @@ section:nth-child(1) section {
   -webkit-transition: 5s;
   transition: 5s;
   background-color: var(--color-white);
+}
+
+.card h6 {
+  margin-bottom: 1rem;
+  margin-right: 1rem;
+  padding: 0.5rem;
+  display: inline-block;
+  background-color: var(--color-grey);
+  border: 0.2rem solid var(--color-dark);
+  border-radius: 0.5rem;
+  -webkit-box-shadow: 0rem 0rem 0.01rem rgba(0, 0, 0, 0.15);
+          box-shadow: 0rem 0rem 0.01rem rgba(0, 0, 0, 0.15);
+  color: var(--color-dark);
+  -webkit-transition: 1s;
+  transition: 1s;
 }
 
 .card:hover {
@@ -408,10 +408,28 @@ section:nth-child(1) section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   gap: 1rem;
   background-color: var(--color-dark);
+}
+
+.blog__cards .log {
+  background-color: var(--color-white);
+  padding: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-size: var(--h3);
+  font-weight: 700;
 }
 
 article.blog-post {
