Blog turned into Log.

--- a/src/styles/_hub.scss
+++ b/src/styles/_hub.scss
@@ -3,7 +3,7 @@
 @import "_mixins";
 
 // PAGES
-@import "../pages/Blog/_blog";
+@import "../pages/Log/_log";
 @import "../pages/BlogPost/blog-post";
 @import "../pages/Home/_home";
 @import "../pages/Nvm/_nvm";
