--- a/src/styles/_hub.scss
+++ b/src/styles/_hub.scss
@@ -1,5 +1,4 @@
 @import "_classes";
-@import "_dark-mode";
 @import "_mixins";
 
 // PAGES
@@ -12,6 +11,7 @@
 
 // COMPONENTS
 @import "../components/Footer/_footer";
+@import "../components/DarkMode/_dark-mode";
 @import "../components/Goals/_goals";
 @import "../components/Header/_header";
 @import "../components/ProgressBar/_progress-bar";
