--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -1,7 +1,8 @@
 footer {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  // align-items: center;
+  overflow-y: hidden;
 
   background-color: var(--color-dark);
   font-size: var(--h5);
@@ -18,19 +19,30 @@ footer {
   }
 
   section {
+    border-top: none;
+    margin-top: -2rem;
+    max-width: 45rem;
+    padding: 0 10rem 0 2rem;
+
     display: flex;
     flex-direction: row;
     gap: .5rem;
-    align-items: center;
-    justify-content: center;
+    // align-items: left;
+    // justify-content: space-around;
 
     a {
+      border-radius: .75rem .75rem 0 0;
+      padding: 1rem 0;
+
       background-color: var(--color-grey);
-      border-radius: .5rem .5rem 0 0;
       text-align: center;
+
+      transform: translateY(.5rem);
+      transition: var(--speed-fast);
 
       &:hover {
         background-color: var(--color-yellow);
+        transform: translateY(0);
       }
     }
   }
