--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1020,9 +1020,7 @@ footer {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  overflow-y: hidden;
   background-color: var(--color-dark);
   font-size: var(--h5);
   -webkit-transition: border-radius var(--speed-slow);
@@ -1038,6 +1036,10 @@ footer a:visited {
 }
 
 footer section {
+  border-top: none;
+  margin-top: -2rem;
+  max-width: 45rem;
+  padding: 0 10rem 0 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1046,22 +1048,23 @@ footer section {
       -ms-flex-direction: row;
           flex-direction: row;
   gap: .5rem;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
 }
 
 footer section a {
+  border-radius: .75rem .75rem 0 0;
+  padding: 1rem 0;
   background-color: var(--color-grey);
-  border-radius: .5rem .5rem 0 0;
   text-align: center;
+  -webkit-transform: translateY(0.5rem);
+          transform: translateY(0.5rem);
+  -webkit-transition: var(--speed-fast);
+  transition: var(--speed-fast);
 }
 
 footer section a:hover {
   background-color: var(--color-yellow);
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
 }
 
 .goals {
@@ -1177,6 +1180,17 @@ header ul li a:focus, header ul li a:hover {
   }
   .streaming__banner {
     max-width: none;
+  }
+  footer section {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    max-width: 100vw;
+  }
+  footer section a {
+    border-radius: 0;
+    width: 100%;
   }
 }
 
