Artist links moved to Music page.

--- a/src/styles/_hub.scss
+++ b/src/styles/_hub.scss
@@ -5,6 +5,7 @@
 @import "../pages/Log/_log";
 @import "../pages/BlogPost/blog-post";
 @import "../pages/Home/_home";
+@import "../pages/Music/_music";
 @import "../pages/Nvm/_nvm";
 @import "../pages/Streaming/_streaming";
 @import "../pages/Photography/_photography";
