--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,7 @@
 // MEDIA QUERRY BREAKPOINTS
 $phone: 414px;
 $tablet: 64rem;
-$red: red;
+$red: #af3333; // FOR DEBUGGING
 
 :root {
   // GLOBAL SIZES
