Phot image file structure updated.

--- a/src/pages/Photography/_photography.scss
+++ b/src/pages/Photography/_photography.scss
@@ -1,27 +1,27 @@
 .photo-1 {
   @include photo-default;
   
-  background-image: url('../../public/images/michel.jpg');
+  background-image: url('../../public/images/photos/1.jpg');
   background-position: center;
 }
 
 .photo-2 {
   @include photo-default;
 
-  background-image: url('../../public/images/michel2.jpg');
+  background-image: url('../../public/images/photos/2.jpg');
 }
 
 .photo-3 {
   @include photo-default;
 
-  background-image: url('../../public/images/michel3.jpg');
+  background-image: url('../../public/images/photos/3.jpg');
   background-position: center top;
 }
 
 .photo-4 {
   @include photo-default;
 
-  background-image: url('../../public/images/michel4.jpg');
+  background-image: url('../../public/images/photos/4.jpg');
   background-position: center center;
 }
 
