Photo component URL restructured.

--- a/src/components/Section/_section.scss
+++ b/src/components/Section/_section.scss
@@ -1,6 +1,3 @@
-.photo-5 {
+.photo-section {
   @include photo-default;
-
-  background-image: url('../../public/images/vsc.jpg');
-  background-position: center center;
 }
