--- a/src/pages/BlogPost/Imagination/_imagination.scss
+++ b/src/pages/BlogPost/Imagination/_imagination.scss
@@ -45,7 +45,7 @@
     position: fixed;
     left: calc(62vw - 1rem);
     
-    background-image: url('../../public/images/photos/6.jpg');
+    background-image: url('../../public/images/photo/6.jpg');
     background-size: contain;
   }
 }
