--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -3,6 +3,7 @@
   padding: 2rem;
 
   background-size: cover;
+  background-position: center center;
 
   h2 {
     color: var(--color-staticwhite);
