--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -513,12 +513,13 @@ section.blog-post {
   min-height: 89vh;
   padding: 2rem;
   background-size: cover;
+  background-position: center center;
   width: 100%;
   height: 100%;
   border-left: 1rem solid var(--color-dark);
   position: fixed;
   left: calc(62vw - 1rem);
-  background-image: url("../../public/images/photos/6.jpg");
+  background-image: url("../../public/images/photo/6.jpg");
   background-size: contain;
 }
 
@@ -885,70 +886,6 @@ main.nvm {
   background: var(--color-dark);
 }
 
-.photo-1 {
-  min-height: 89vh;
-  padding: 2rem;
-  background-size: cover;
-  background-image: url("../../public/images/photos/1.jpg");
-  background-position: center;
-}
-
-.photo-1 h2 {
-  color: var(--color-staticwhite);
-  max-width: 45rem;
-}
-
-.photo-2 {
-  min-height: 89vh;
-  padding: 2rem;
-  background-size: cover;
-  background-image: url("../../public/images/photos/2.jpg");
-}
-
-.photo-2 h2 {
-  color: var(--color-staticwhite);
-  max-width: 45rem;
-}
-
-.photo-3 {
-  min-height: 89vh;
-  padding: 2rem;
-  background-size: cover;
-  background-image: url("../../public/images/photos/3.jpg");
-  background-position: center top;
-}
-
-.photo-3 h2 {
-  color: var(--color-staticwhite);
-  max-width: 45rem;
-}
-
-.photo-4 {
-  min-height: 89vh;
-  padding: 2rem;
-  background-size: cover;
-  background-image: url("../../public/images/photos/4.jpg");
-  background-position: center center;
-}
-
-.photo-4 h2 {
-  color: var(--color-staticwhite);
-  max-width: 45rem;
-}
-
-.photo-5 {
-  min-height: 89vh;
-  padding: 2rem;
-  background-size: cover;
-  background-image: url("../../public/images/vsc.jpg");
-  background-position: center center;
-}
-
-.photo-5 h2 {
-  color: var(--color-staticwhite);
-  max-width: 45rem;
-}
-
 section {
   width: 100vw;
   height: 100%;
@@ -1159,15 +1096,14 @@ header ul li a:focus, header ul li a:hover {
   }
 }
 
-.photo-5 {
+.photo-section {
   min-height: 89vh;
   padding: 2rem;
   background-size: cover;
-  background-image: url("../../public/images/vsc.jpg");
   background-position: center center;
 }
 
-.photo-5 h2 {
+.photo-section h2 {
   color: var(--color-staticwhite);
   max-width: 45rem;
 }
